[gd_scene load_steps=38 format=3 uid="uid://l4vt5daab5ky"]

[ext_resource type="Texture2D" uid="uid://bbia5hya4csk0" path="res://Assets/wood-table-texture-natural-patterns-on-wooden-top-enhancing-the-beauty-of_9938382.jpg" id="1_qdflj"]
[ext_resource type="Script" path="res://Script/adventure.gd" id="1_u18vj"]
[ext_resource type="Texture2D" uid="uid://cxbaw2ayrjf4g" path="res://Assets/Satan Sprite Sheet.png" id="3_rkru7"]
[ext_resource type="FontFile" uid="uid://o2ilkpqd1i0f" path="res://Assets/fonts/MinecraftRegular-Bmg3.otf" id="3_wet58"]
[ext_resource type="Texture2D" uid="uid://jx3di744noq" path="res://Assets/Player Sprite Sheet.png" id="5_eun4u"]
[ext_resource type="Script" path="res://Script/home_btn.gd" id="5_sxdkh"]
[ext_resource type="Texture2D" uid="uid://2ckajmm8ajpe" path="res://Assets/blue genie.png" id="5_ypxds"]
[ext_resource type="Texture2D" uid="uid://ddto8g2e7y463" path="res://Assets/alif.png" id="6_jrf6m"]
[ext_resource type="Texture2D" uid="uid://fo6mpavk5cx4" path="res://Assets/green genie.png" id="6_ulg67"]
[ext_resource type="Texture2D" uid="uid://5kkcaltm2fwf" path="res://Assets/Snake.png" id="7_nrapy"]
[ext_resource type="Texture2D" uid="uid://bassbjec0ar2h" path="res://Assets/Pork Demon.png" id="8_fdanc"]

[sub_resource type="AtlasTexture" id="AtlasTexture_w7hmd"]
atlas = ExtResource("3_rkru7")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_w15xp"]
atlas = ExtResource("3_rkru7")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_8qhcv"]
atlas = ExtResource("3_rkru7")
region = Rect2(0, 64, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_vwyk4"]
atlas = ExtResource("3_rkru7")
region = Rect2(64, 64, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_cescb"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_w7hmd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w15xp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8qhcv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vwyk4")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_87yub"]
atlas = ExtResource("5_ypxds")
region = Rect2(0, 0, 64, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_00dg6"]
atlas = ExtResource("5_ypxds")
region = Rect2(64, 0, 64, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_kc46a"]
atlas = ExtResource("5_ypxds")
region = Rect2(128, 0, 64, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_3pfek"]
atlas = ExtResource("5_ypxds")
region = Rect2(192, 0, 64, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_j284e"]
atlas = ExtResource("5_ypxds")
region = Rect2(256, 0, 64, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_mjnk4"]
atlas = ExtResource("5_ypxds")
region = Rect2(320, 0, 64, 128)

[sub_resource type="SpriteFrames" id="SpriteFrames_ays4h"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_87yub")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_00dg6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kc46a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3pfek")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j284e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mjnk4")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_vet0o"]
atlas = ExtResource("6_ulg67")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_88sqq"]
atlas = ExtResource("6_ulg67")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_pbx4u"]
atlas = ExtResource("6_ulg67")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_fjaa3"]
atlas = ExtResource("6_ulg67")
region = Rect2(192, 0, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_suhrc"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_vet0o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_88sqq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pbx4u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fjaa3")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_pcybc"]
atlas = ExtResource("8_fdanc")
region = Rect2(0, 0, 64, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_gfwb5"]
atlas = ExtResource("8_fdanc")
region = Rect2(64, 0, 64, 128)

[sub_resource type="SpriteFrames" id="SpriteFrames_p7wgy"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_pcybc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gfwb5")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_p2wdb"]
atlas = ExtResource("7_nrapy")
region = Rect2(0, 0, 64, 128)

[sub_resource type="SpriteFrames" id="SpriteFrames_vu8ym"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_p2wdb")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_x55pq"]
atlas = ExtResource("5_eun4u")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_l5a7l"]
atlas = ExtResource("5_eun4u")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_0gv78"]
atlas = ExtResource("5_eun4u")
region = Rect2(0, 64, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_86x0m"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_x55pq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l5a7l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0gv78")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[node name="Adventure" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_u18vj")

[node name="Background" type="TextureRect" parent="."]
texture_filter = 1
layout_mode = 0
offset_right = 1152.0
offset_bottom = 648.0
texture = ExtResource("1_qdflj")

[node name="Enemy" type="Node2D" parent="."]
texture_filter = 1
position = Vector2(177, 308)
scale = Vector2(2.88281, 2.88281)

[node name="EnemyHealth" type="ProgressBar" parent="Enemy"]
unique_name_in_owner = true
offset_left = -46.6725
offset_top = 36.8908
offset_right = 47.3275
offset_bottom = 50.8908
theme_override_fonts/font = ExtResource("3_wet58")
theme_override_font_sizes/font_size = 10
step = 1.0
value = 100.0

[node name="Red Genie" type="AnimatedSprite2D" parent="Enemy"]
unique_name_in_owner = true
visible = false
sprite_frames = SubResource("SpriteFrames_cescb")
autoplay = "default"
frame_progress = 0.106381

[node name="Blue Genie" type="AnimatedSprite2D" parent="Enemy"]
unique_name_in_owner = true
visible = false
position = Vector2(-0.346884, 2.0813)
scale = Vector2(0.683605, 0.683605)
sprite_frames = SubResource("SpriteFrames_ays4h")
autoplay = "default"
frame_progress = 0.454036

[node name="Green Genie" type="AnimatedSprite2D" parent="Enemy"]
unique_name_in_owner = true
visible = false
sprite_frames = SubResource("SpriteFrames_suhrc")
autoplay = "default"
frame_progress = 0.369092

[node name="Pig Demon" type="AnimatedSprite2D" parent="Enemy"]
unique_name_in_owner = true
visible = false
position = Vector2(0, -31.2195)
sprite_frames = SubResource("SpriteFrames_p7wgy")
autoplay = "default"
frame_progress = 0.673611

[node name="Snake Demon" type="AnimatedSprite2D" parent="Enemy"]
unique_name_in_owner = true
visible = false
position = Vector2(-0.346884, -31.5664)
sprite_frames = SubResource("SpriteFrames_vu8ym")

[node name="Player" type="AnimatedSprite2D" parent="."]
texture_filter = 1
position = Vector2(960, 301)
scale = Vector2(3.14063, 3.14063)
sprite_frames = SubResource("SpriteFrames_86x0m")
autoplay = "default"
frame_progress = 0.0949568
flip_h = true

[node name="PlayerHealth" type="ProgressBar" parent="Player"]
unique_name_in_owner = true
offset_left = -46.6725
offset_top = 36.8908
offset_right = 47.3275
offset_bottom = 50.8908
theme_override_fonts/font = ExtResource("3_wet58")
theme_override_font_sizes/font_size = 10
step = 1.0
value = 100.0

[node name="PlayerAnswer1" type="Button" parent="Player"]
offset_left = -292.0
offset_top = 54.0
offset_right = -208.0
offset_bottom = 72.0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 5
theme_override_fonts/font = ExtResource("3_wet58")
theme_override_font_sizes/font_size = 10
text = "Answer 1"

[node name="PlayerAnswer2" type="Button" parent="Player"]
offset_left = -292.0
offset_top = 78.0
offset_right = -208.0
offset_bottom = 96.0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 5
theme_override_fonts/font = ExtResource("3_wet58")
theme_override_font_sizes/font_size = 10
text = "Answer 2"

[node name="PlayerAnswer3" type="Button" parent="Player"]
offset_left = -46.0
offset_top = 56.0
offset_right = 45.0
offset_bottom = 74.0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 5
theme_override_fonts/font = ExtResource("3_wet58")
theme_override_font_sizes/font_size = 10
text = "Answer 3"

[node name="PlayerAnswer4" type="Button" parent="Player"]
offset_left = -46.1355
offset_top = 78.0488
offset_right = 44.8645
offset_bottom = 96.0488
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 5
theme_override_fonts/font = ExtResource("3_wet58")
theme_override_font_sizes/font_size = 10
text = "Answer 4"

[node name="HomeBtn" type="Button" parent="."]
layout_mode = 0
offset_left = 997.0
offset_top = 18.0
offset_right = 1140.0
offset_bottom = 82.0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 5
theme_override_fonts/font = ExtResource("3_wet58")
theme_override_font_sizes/font_size = 50
text = "Home"
script = ExtResource("5_sxdkh")

[node name="BgAbjad" type="ColorRect" parent="."]
z_as_relative = false
layout_mode = 0
offset_left = 422.0
offset_top = 150.0
offset_right = 698.0
offset_bottom = 459.0

[node name="AbjadTexture" type="TextureRect" parent="BgAbjad"]
unique_name_in_owner = true
z_index = 1
texture_filter = 1
layout_mode = 0
offset_top = 16.0
offset_right = 276.0
offset_bottom = 292.0
texture = ExtResource("6_jrf6m")
expand_mode = 4
stretch_mode = 5

[node name="Stage" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 0
offset_left = 357.0
offset_top = 10.0
offset_right = 783.0
offset_bottom = 81.0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("3_wet58")
theme_override_font_sizes/font_size = 50
text = "Stage 1"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Score" type="Label" parent="."]
layout_mode = 0
offset_left = 8.0
offset_top = 2.0
offset_right = 412.0
offset_bottom = 74.0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("3_wet58")
theme_override_font_sizes/font_size = 50
text = "0"
vertical_alignment = 1

[node name="Lose Panel" type="Panel" parent="."]
visible = false
z_index = 5
layout_mode = 0
offset_left = 301.0
offset_top = 102.0
offset_right = 854.0
offset_bottom = 486.0

[node name="Label" type="Label" parent="Lose Panel"]
layout_mode = 0
offset_right = 550.0
offset_bottom = 381.0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("3_wet58")
theme_override_font_sizes/font_size = 50
text = "You Lose!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HomeBtn" type="Button" parent="Lose Panel"]
layout_mode = 0
offset_left = 204.0
offset_top = 292.0
offset_right = 347.0
offset_bottom = 356.0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 5
theme_override_fonts/font = ExtResource("3_wet58")
theme_override_font_sizes/font_size = 50
text = "Home"
script = ExtResource("5_sxdkh")

[connection signal="button_down" from="Player/PlayerAnswer1" to="." method="_on_player_answer_1_button_down"]
[connection signal="button_down" from="Player/PlayerAnswer2" to="." method="_on_player_answer_2_button_down"]
[connection signal="button_down" from="Player/PlayerAnswer3" to="." method="_on_player_answer_3_button_down"]
[connection signal="button_down" from="Player/PlayerAnswer4" to="." method="_on_player_answer_4_button_down"]
[connection signal="button_down" from="HomeBtn" to="HomeBtn" method="_on_button_down"]
[connection signal="button_down" from="Lose Panel/HomeBtn" to="Lose Panel/HomeBtn" method="_on_button_down"]
